--- a/TicTacDoh/app/src/main/res/values/strings.xml
+++ b/TicTacDoh/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     
 	<!-- these elements need to be changed before going to production -->
-	<string name="about_1" translatable="false">Willy Shmo\'s Tic Tac Toe Version 04.04</string>
-    <string name="about_2" translatable="false">Copyright © 1986&#8211;2018 &#8211; Tom Volpert and
+	<string name="about_1" translatable="false">Willy Shmo\'s Tic Tac Toe Version 1.105.03</string>
+    <string name="about_2" translatable="false">Copyright © 1986&#8211;2020 &#8211; Tom Volpert and
 		Joe Guzzardo. All rights reserved.</string>
 
 	<!-- string name="domainName">http://www.guzzardo.com:6260</string -->
@@ -12,9 +12,9 @@
 	<!-- string name="domainName">http://player.willyshmo.com</string -->
 	<!-- string name="domainName" translatable="false">http://willyshmo.com:8080</string --> 
 
-	<string name="RabbitMQQueuePrefix" translatable="false">test</string>
-	<string name="RabbitMQHostName" translatable="false">3.16.84.32</string>
-	<string name="RabbitMQPortNumber" translatable="false">5672</string>
+	<string name="RabbitMQQueuePrefixx" translatable="false">test</string>
+	<string name="RabbitMQHostNamex" translatable="false">3.16.84.32</string>
+	<string name="RabbitMQPortNumberx" translatable="false">5672</string>
 	<!--string name="RabbitMQHostName" translatable="false">rabbitMq.willyshmo.com</string -->
 	<!--string name="RabbitMQHostName" translatable="false">24.148.41.245</string -->
 		
